ProjectJon/stylishsheet.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');

:root {
    --len: 148ch;
    --ansi-blue-foreground: #55f;
    --ansi-blue-background: #000080;
    --bgi: repeating-linear-gradient(to right,rgba(255, 255, 255, 1) 0%, rgba(73, 73, 74, 1) 39%, rgba(54, 60, 61, 1) 53%, rgba(51, 57, 58, 1) 78%, rgba(58, 58, 66, 1) 100%);
    --bgim: repeating-linear-gradient(to right,rgba(60, 196, 214, 1) 0%, rgba(79, 171, 214, 1) 29%, rgba(16, 167, 227, 1) 53%, rgba(56, 208, 235, 1) 78%, rgba(40, 237, 237, 1) 100%);
    --bgit: repeating-linear-gradient(to right,rgba(25, 88, 15, 1) 0%, rgba(87, 199, 133, 1) 35%, rgba(255, 255, 255, 1) 55%, rgba(255, 255, 255, 1) 100%);
}

p {
    text-align: left;
    color: white;
}
h2 {
    text-align: left;

}
.standard {
    text-decoration: none;
    color: #00b6f9;
}

.hyperline {
    color: #ff5;
    text-decoration: none
}
.hyperline:hover {
    text-decoration: underline;
}

.title {
    text-align: center;
    width: fit-content;
    min-width: fit-content;
    text-align: center;
    min-height: 100px;
    transform: translate(0%, -10%);
    margin-top: -50px;
    padding-bottom: 40px;
    margin: auto;
}

.funny {
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-image: repeating-linear-gradient(to right, #ff0000 0%, #ff9a00 10%, #d1de21 20%, #4fdc4a 30%, #3fdad8 40%, #2fc9e2 50%, #1c7fee 60%, #5f15f2 70%, #ba0cf8 80%, #fb07d9 90%, #ff0000 100%);
    animation: move 3s linear infinite;
    color: blue;
}

.construction {
    margin-top: -20px;
    font-size: 20px;
    font-family: "Roboto Slab", serif;
    font-style: normal;
    margin-left: -50%;
}

body {
    //background-color: #232323;
    background-color: #17181c;
    //background-image: linear-gradient(to top, #282828 50%, #272727 60%, #262626 70%, #252525 100%);
    font-family: monospace;
    font-size: 25px;
    color: #ff7edb;
}
.panel {
    padding-bottom: 20px;
}
.underground {
    font-family: "Lucida Grande", "Trebuchet MS", Verdana, sans-serif;
}
.login {
    color: white;
    display: flex;
    transform: translateY(20%) translateX(-5%);
}
.fieldnomore:hover {
    color: #CC0000
}
.titleboxing {
    display: inline-block;
    padding: 8px 7px;
    background-color: var(--ansi-blue-background);
    box-sizing: border-box;
    box-shadow: 8px 8px 0 1px var(--ansi-blue-foreground);
}
.denial {
    background: none;
    border: none;
    display: inline;
    font: inherit;
    outline: none;
    cursor: pointer;
}
.logout::-moz-focus-inner {
    border: none;
    padding: 0;
}
.link-underground:hover {
    width: var(--len);
    margin: 0 auto;
    background-image: var(--bgi);
    background-position: 0 0, 0 0;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    animation: move 12s linear infinite;
    animation-play-state: running
}
.link-underground {
    text-decoration: none;
    background-image: var(--bgi);
    background-position: 0 0, 0 0;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    animation: move 12s linear infinite;
    animation-play-state: paused
}
.link-myrient:hover {
    width: var(--len);
    margin: 0 auto;
    background-image: var(--bgim);
    background-position: 0 0, 0 0;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    animation: move 12s linear infinite;
    animation-play-state: running
}

.link-myrient {
    text-decoration: none;
    background-image: var(--bgim);
    background-position: 0 0, 0 0;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    animation: move 12s linear infinite;
    animation-play-state: paused
}

.link-torrentleech:hover {
    width: var(--len);
    margin: 0 auto;
    background-image: var(--bgit);
    background-position: 0 0, 0 0;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    animation: move 12s linear infinite;
    animation-play-state: running
}
.link-torrentleech {
    text-decoration: none;
    background-image: var(--bgit);
    background-position: 0 0, 0 0;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    animation: move 12s linear infinite;
    animation-play-state: paused
}
.titlefade {
    opacity: 0;
    animation: fadeIn 1s linear forwards;
    animation-delay: 2s;
}
.subtitlefade {
    opacity: 0;
    animation: fadeIn 1s linear forwards;
    animation-delay: 4s;
}

.image {
    opacity: 0;
    width: 500px;
    display: block;
    padding: 20px;
    margin: auto;
}

.bamient {
    animation: fadeIn 1s linear forwards;
    animation-delay: 5s;
}
.zaminu {
    animation: fadeIn 1s linear forwards;
    animation-delay: 6s;
}
.ramment {
    animation: fadeIn 1s linear forwards;
    animation-delay: 7s;
}
.causewhynot {
    animation: 
        move 3s linear infinite,
        horizontal-bounce 3.141s infinite alternate linear,
        vertical-bounce 1.414s infinite alternate linear;
}

@keyframes horizontal-bounce {
    from {
        margin-left: 0vw;
    }
    to {
        margin-left: 85.6vw;
    }
}

@keyframes vertical-bounce {
    from {
        margin-top: 0vh;
    }
    to {
        margin-top: 80.5vh;
    }
}



@keyframes fadeIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

@keyframes move {
    to {
        background-position: var(--len) 0, 0 0;
    }
}

.seize {
    display: flex;
}

.tabler {
    align-items: stretch;
    flex-direction: row;
    height: min-content;
    float: right;
    display: table;
    padding: 7px;
    list-style-type: none;
    margin-right: 0px;
    direction: ltr;
    text-align: left;
    border: 1px solid #101010;
    background-color: #202020;
    padding: 5px;
    font-size: 80%;
    width: 300px;
    max-width: 100%;
    overflow: auto;
}

.tablertitle {
    text-align: center;
}

.tabler li {
    margin-bottom: 0.1em;
    display: list-item;
    text-align: -webkit-match-parent;
}

.tabler ul {
    list-style: none;
    line-height: 1.6;
    padding: 0;
}

.tabler ul ul {
    margin: 0 0 0 2em;
}

.tabler a {
    text-decoration: none;
    color: #fb22dd;
    background: none;

}
.tabler a:hover {
    text-decoration-line: underline;
}

